# UnattendedUpgrades-slacknotify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.py  pyproject.toml
scripts/: cleanup.py  setup.sh
src/: config.ini.sample  config.py  notifyslack.py
tests/: test_config.py
tests/data/: mail_valid_NO_UPDATE.txt  mail_valid_NO_UPDATES_REBOOT_PENDING.txt  mail_valid_SUCCESS.txt
